Dark Mode Fixes
Fixed the country selection and the search bar dark mode fix

--- a/src/app/pages/header-search/header-search.component.scss
+++ b/src/app/pages/header-search/header-search.component.scss
@@ -18,6 +18,10 @@
   padding: 0px;
   background: #fff;
   border-radius: 10px;
+  .p-button
+    {
+      border-radius: 0px 8px 8px 0 !important;
+    }
 }
 
 btn-primary {
@@ -26,7 +30,10 @@ btn-primary {
 
 .list-group {
   position: absolute;
-  z-index: 9999 !important;
+  z-index: 1 !important;
   right: 0;
   left: 0;
+  top: 60px;
+  border-radius: 10px;
+  border: 1px solid #9bc329;
 }
