--- a/src/styles.scss
+++ b/src/styles.scss
@@ -794,6 +794,27 @@ h1, h2, h3, h4, h5 {
   {
     background-color:#2e3134;
   }
+  .search-dropdown
+  {
+    background:transparent;
+    .p-inputgroup
+    {
+      background: #121212;
+    }
+    .list-group
+      {
+        .list-group-item {
+          color: #ffffff !important;
+          background-color: #202124 !important;
+        }
+      }
+  }
+  .country-border
+  {
+    border: 2px solid #2e3134 !important;
+    border-radius: 5%;
+    background: #121212 !important;
+  }
   .footer-card
     {
       background-color: #2e3134 !important;
